--- a/src/pages/home/home.html
+++ b/src/pages/home/home.html
@@ -1,14 +1,31 @@
 <ion-header>
+
   <ion-navbar>
-    <ion-title>
-      Ionic Blank
-    </ion-title>
+    <ion-title>organizations</ion-title>
+    <ion-buttons start>
+      <button ion-button icon-only (click)="goToCreatePage()">
+        <ion-icon name="add"></ion-icon>
+      </button>
+    </ion-buttons>
   </ion-navbar>
+
 </ion-header>
 
 <ion-content padding>
-  The world is your oyster.
-  <p>
-    If you get lost, the <a href="http://ionicframework.com/docs/v2">docs</a> will be your guide.
-  </p>
+  <ion-list>
+    <ion-item *ngFor="let organization of organizationList | async" (click)="goToDetailPage(organization)">
+      <ion-row justify-content-between>
+        <ion-col col-10>
+          <h2>{{ organization.name }}</h2>
+        </ion-col>
+        <ion-col col-1>
+          <ion-buttons end>
+            <button ion-button clear icon-only (click)="goToDetailPage(organization)">
+              <ion-icon name="more"></ion-icon>
+            </button>
+          </ion-buttons>
+        </ion-col>
+      </ion-row>
+    </ion-item>
+  </ion-list>
 </ion-content>
